# discohack2026

./: README.md
.github/workflows/: ci.yml
backend/: .gitignore  AGENTS.md  Cargo.toml  README.md  compose.yml  justfile
backend/.sqlx/: query-befb6f3679a2fec5e0e36ad76340b66c9cedc17c159e429adb86793b974914b0.json  query-caa945a4aaf042077df739326d98dbe1df05fb24fa24c22d0ffbca394d7976b7.json  query-e7ef07af967397053617e90d6c76094c2cf5ae3230f482820fd5a7280411b8b3.json  query-ed23b71a6ea9b40c1678a5e9d15972044f912074c0913dac6592ca84c4fbd08c.json  query-f865a33ae39e73ea5fe4531024622eff91b8ca06d9107a8ecdd7fdfed7655601.json
backend/migrations/: 20260416094500_init_auth_schema.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
backend/src/auth/: password.rs  session.rs
backend/src/db/: auth.rs
backend/src/dto/: auth.rs
backend/src/extractors/: auth.rs  mod.rs  validated_json.rs
backend/src/rest/: auth.rs  hello.rs
backend/tests/: auth_e2e.rs  auth_integration.rs
backend/tests/common/: mod.rs
frontend/: .prettierignore  README.md  eslint.config.js  package.json  tsconfig.json  vite.config.ts
frontend/src/: routeTree.gen.ts  router.tsx  styles.css
frontend/src/auth/: auth.api.ts  auth.queries.ts  auth.schemas.ts
frontend/src/header/: header.component.tsx  theme-control.component.tsx
frontend/src/lib/: api.ts  theme.ts
frontend/src/routes/: __root.tsx  _auth.tsx  _protected.tsx  index.tsx
frontend/src/routing/: route-pending.component.tsx
openspec/: README.md  config.yaml
openspec/changes/consolidate-openspec-at-root/: design.md  proposal.md  tasks.md
openspec/specs/auth-flow-tests/: spec.md
(+29 files in other folders)
