[package]
name = "rust-hack-template"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.10.3", features = ["cookie"] }
axum-valid = "0.24.0"
bon = "3.8.1"
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
directories = "6.0.0"
dotenvy = "0.15.7"
envy = "0.4.2"
futures = "0.3.31"
futures-util = "0.3.31"
itertools = "0.14.0"
num_cpus = "1.17.0"
parking_lot = "0.12.5"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json", "cookies"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
socketioxide = { version = "0.17.2", features = ["tracing"] }
thiserror = "2.0.17"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.6", features = ["trace", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "std"] }
uuid = { version = "1.18.1", features = ["v4", "v7", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "derive", "macros", "uuid", "chrono", "bigdecimal", "json", "migrate" ] }

[dev-dependencies]
rstest = "0.25.0"
testcontainers-modules = { version = "0.11.6", features = ["postgres", "watchdog"] }
tower = { version = "0.5.2", features = ["util"] }
yare = "3.0.0"
